# internal/app/swagger/swagger.json
@@ -920,7 +920,40 @@
                 }
             }
         },
-        "/api/v1/pub/login": {
+        "/api/v1/pub/refresh-token": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "tags": [
+                    "登录管理"
+                ],
+                "summary": "刷新令牌",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/schema.SignInTokenInfo"
+                        }
+                    },
+                    "401": {
+                        "description": "{error:{code:0,message:未授权}}",
+                        "schema": {
+                            "$ref": "#/definitions/schema.ErrorResult"
+                        }
+                    },
+                    "500": {
+                        "description": "{error:{code:0,message:服务器错误}}",
+                        "schema": {
+                            "$ref": "#/definitions/schema.ErrorResult"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/pub/signin": {
             "post": {
                 "tags": [
                     "登录管理"
@@ -959,7 +992,7 @@
                 }
             }
         },
-        "/api/v1/pub/login/captcha": {
+        "/api/v1/pub/signin/captcha": {
             "get": {
                 "produces": [
                     "image/png"
@@ -1002,7 +1035,7 @@
                 }
             }
         },
-        "/api/v1/pub/login/captchaid": {
+        "/api/v1/pub/signin/captchaid": {
             "get": {
                 "tags": [
                     "登录管理"
@@ -1018,7 +1051,7 @@
                 }
             }
         },
-        "/api/v1/pub/login/exit": {
+        "/api/v1/pub/signin/exit": {
             "post": {
                 "tags": [
                     "登录管理"
@@ -1029,39 +1062,6 @@
                         "description": "{status:OK}",
                         "schema": {
                             "$ref": "#/definitions/schema.StatusResult"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/pub/refresh-token": {
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "tags": [
-                    "登录管理"
-                ],
-                "summary": "刷新令牌",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/schema.SignInTokenInfo"
-                        }
-                    },
-                    "401": {
-                        "description": "{error:{code:0,message:未授权}}",
-                        "schema": {
-                            "$ref": "#/definitions/schema.ErrorResult"
-                        }
-                    },
-                    "500": {
-                        "description": "{error:{code:0,message:服务器错误}}",
-                        "schema": {
-                            "$ref": "#/definitions/schema.ErrorResult"
                         }
                     }
                 }
